fix: remove scaleAnimation on smaller Screens.

--- a/src/styles.css
+++ b/src/styles.css
@@ -901,8 +901,9 @@ input[type="checkbox"] {
 
   #mainAreaStats {
     width: 70vw;
-    height: 441px;
     row-gap: 15px;
+    transform: scale(1);
+    width: 80vw;
   }
 
   #mainAreaToday {
@@ -938,8 +939,7 @@ input[type="checkbox"] {
   }
 
   #mainAreaStats {
-    width: 70vw;
-    height: 431px;
+    width: 80vw;
     row-gap: 10px;
   }
 
@@ -1034,7 +1034,7 @@ input[type="checkbox"] {
   }
 
   #mainAreaStats {
-    height: 412px;
+    width: 92vw;
     row-gap: 5px;
   }
 
@@ -1143,7 +1143,7 @@ input[type="checkbox"] {
   }
 
   #mainAreaStats {
-    height: 410px;
+    width: 92vw;
     row-gap: 0px;
   }
 
